compute/infra/kubes/wekan/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wekan
  name: wekan
  labels:
    app: wekan
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wekan
  template:
    metadata:
      labels:
        app: wekan
    spec:
      containers:
        - image: quay.io/wekan/wekan:v6.78
          name: wekan
          ports:
          - containerPort: 8080
            name: wekan
