compute/infra/kubes/wekan/web-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: wekan-web 
  name: wekan-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wekan-web
  template:
    metadata:
      labels:
        app: wekan-web
    spec:
      containers:
      - image: wekanteam/wekan 
        name: web
        ports:
          - containerPort: 8080
            name: web
