compute/infra/kubes/wekan/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wekan
  labels:
    app: wekan
spec:
  type: ClusterIP
  selector:
    app: wekan
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
